# rss-markdown-proxy

./: .travis.yml  Dockerfile  LICENSE  README.markdown  docker-compose.yml  rss-markdown-proxy.cabal  stack.yaml
app/: Main.hs
cli/: Main.hs
metrics-noop/Lib/: Metrics.hs
metrics/Lib/: Metrics.hs
server/: Main.hs
src/: Lib.hs
src/Lib/: CLI.hs  Server.hs  Types.hs
test/: Spec.hs
test/fixtures/: output.rss  sounds.rss
