name:                rss-markdown-proxy
version:             0.1.0.0
synopsis:            An RSS proxy rendering markdown descriptions
description:         Please see README.md
homepage:            http://github.com/passy/rss-markdown-proxy#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2015 Pascal Hartig
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Server
                     , Lib.CLI
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , text
                     , transformers
                     , bytestring
                     , scotty
                     , wreq
                     , hxt
                     , markdown
                     , blaze-html
                     , TCache
                     , data-default
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                     , Arrows
                     , NoImplicitPrelude
                     , ExistentialQuantification

executable rss-markdown-proxy-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rss-markdown-proxy
                     , optparse-applicative
                     , data-default
  default-language:    Haskell2010

test-suite rss-markdown-proxy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rss-markdown-proxy
                     , hspec
                     , basic-prelude
                     , directory
                     , hxt
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/passy/rss-markdown-proxy
