name:                rss-markdown-proxy
version:             0.1.0.0
synopsis:            An RSS proxy rendering markdown descriptions
description:         Please see README.md
homepage:            http://github.com/passy/rss-markdown-proxy#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2015 Pascal Hartig
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Server
                     , Lib.CLI
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , text
                     , transformers
                     , bytestring
                     , scotty
                     , wreq
                     , hxt
                     , markdown
                     , blaze-html
                     , TCache
                     , data-default
                     , hourglass
  if flag(metrics)
    build-depends:     wai-middleware-metrics
    other-extensions:  CPP
    cpp-options:       -DWITH_METRICS
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                     , Arrows
                     , NoImplicitPrelude
                     , ExistentialQuantification
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                    -- -fwarn-missing-import-lists

executable rss-markdown-proxy-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rss-markdown-proxy
                     , optparse-applicative
                     , data-default
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                    -- -fwarn-missing-import-lists

executable rss-markdown-proxy
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rss-markdown-proxy
                     , text
                     , optparse-applicative
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                    -- -fwarn-missing-import-lists

test-suite rss-markdown-proxy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rss-markdown-proxy
                     , hspec
                     , directory
                     , hxt
                     , text
                     , filepath
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts="-N -T"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/passy/rss-markdown-proxy

-- XXX: This is not actually optional at the moment, but hopefully will be soon.
flag metrics
  description: Enable runtime statistics
  default: True
  manual: True
